[package]
name = "toml_to_json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
toml = { version = "0.7.6", features = ["preserve_order"] }
wasm-bindgen = "0.2.87"
